--- a/src/app/documents/list/list.component.scss
+++ b/src/app/documents/list/list.component.scss
@@ -4,7 +4,26 @@
         width:100%;
     }
     th,td{
-        max-width: 50%;
-        
+        max-width: 50%;  
+    }
+    .mat-header-cell {
+        color: #4050b5 !important;
+        font-weight: 800;
+        text-align: left;
+        border-bottom-width: 1px;
+        border-bottom-color: #4050b5;
+        border-bottom-style: solid;
+      }
+      .mat-cell, .mat-footer-cell {
+        color: rgba(0,0,0,.87);
+        text-align: left;
+      }
+     
+      .mat-row:hover {
+        background-color: #cccccc4a;
+        cursor: pointer;
+      }
+      tr.mat-row, tr.mat-footer-row {
+        height: 50px !important;
     }
 }
