--- a/src/app/reshuffle/list/list.component.html
+++ b/src/app/reshuffle/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="flex-auto">
   <div class="flex flex-col">
-    <app-content-navbar [isBack]="false" [title]="'Holidays'">
+    <app-content-navbar [isBack]="false" [title]="'reshuffle'">
     </app-content-navbar>
 
     <div class="min-h-screen bg-gray-100">
