--- a/src/app/financial-year/add/add.component.html
+++ b/src/app/financial-year/add/add.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col">
     <app-content-navbar
       [isBack]="true"
-      [title]="'Add designation'"
+      [title]="'Add financialYear'"
     ></app-content-navbar>
 
     <!-- card design -->
