--- a/src/app/settings/settings/settings.component.scss
+++ b/src/app/settings/settings/settings.component.scss
@@ -6,3 +6,7 @@
 // right: 0px;
 // /* bottom: -34px; */
 // bottom: -32px;
+.selected{
+    background: #4050b5 !important;
+    color: #fff !important;
+}
