attendance ui and api

--- a/src/app/attendance/attendance/attendance.component.html
+++ b/src/app/attendance/attendance/attendance.component.html
@@ -4,7 +4,7 @@
    
     <div class="content-banner">
       <h1 class="banner-text"> Attendance</h1>
-      <img src="assets/images/attendance-overview.jpg" alt="employee-overview">
+      <img src="assets/images/attendance-overview.jpg" alt="Attendance-overview">
   </div>
 
     <div class="min-h-screen mx-5 my-5">
@@ -35,7 +35,7 @@
               <div><span> History</span></div>
             </div>
             <div class="absolute right-3 bottom-5">
-              <button mat-raised-button color="primary">
+              <button mat-raised-button color="primary" routerLink="./userList">
                 View <span mat-icon></span>
               </button>
             </div>
