--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div class="flex-auto">
   <div class="flex flex-col">
     <app-content-navbar
-      [isBack]="true"
+      [isBack]="false"
       [title]="'Settting'"
     ></app-content-navbar>
     <!-- card design -->
