--- a/src/app/shifts/lists/lists.component.html
+++ b/src/app/shifts/lists/lists.component.html
@@ -18,7 +18,7 @@
                 {{ element.shift_name | titlecase }}
               </td>
             </ng-container>
-            <ng-container matColumnDef="fromDate">
+            <!-- <ng-container matColumnDef="fromDate">
               <th mat-header-cell class="" *matHeaderCellDef>From date</th>
               <td mat-cell class="" *matCellDef="let element">
                 {{ element.fromDate | date}}
@@ -29,7 +29,7 @@
               <td mat-cell class="" *matCellDef="let element">
                 {{ element.toDate | date}}
               </td>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="startTime">
               <th mat-header-cell class="" *matHeaderCellDef>Start time</th>
               <td mat-cell class="" *matCellDef="let element">
