--- a/src/app/attendance/attendance/attendance.component.html
+++ b/src/app/attendance/attendance/attendance.component.html
@@ -22,7 +22,7 @@
               </p>
             </div>
             <div class="absolute right-3 bottom-5">
-              <button mat-raised-button color="primary" (click)="action()">
+              <button mat-raised-button color="primary" (click)="action(todayAttendance)">
                 {{ buttonLabel }}
               </button>
             </div>
@@ -32,7 +32,10 @@
         <mat-card class="example-card p-3 h-40 relative">
           <mat-card-content class="p-3">
             <div class="flex flex-col">
-              <div><span> History</span></div>
+              <div><span> History</span>
+        <img src="assets/images/attendance1.png" alt="" width="100px">
+        </div>
+
             </div>
             <div class="absolute right-3 bottom-5">
               <button mat-raised-button color="primary" routerLink="./userList">
@@ -54,12 +57,7 @@
             </div>
           </mat-card-content>
         </mat-card>
-        <div class="">
-          <h3>Pending list</h3>
-          <p>user attendence api</p>
-          <p>user attendance history api</p>
-          <p>manage attendence api </p>
-        </div>
+        
       </div>
     </div> 
   </div>
