--- a/src/app/attendance/manage-attendance/manage-attendance.component.html
+++ b/src/app/attendance/manage-attendance/manage-attendance.component.html
@@ -88,6 +88,12 @@
               {{ element.employee.departmentDetails[0].dept_name | titlecase }}
             </td>
           </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element"  [style.color]="element?.isPresent ? 'green' : 'red'" >   
+              {{element?.isPresent ? 'Present' : 'Absent'}}
+            </td>
+          </ng-container>
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
@@ -96,9 +102,9 @@
                 [(ngModel)]="element.isPresent"
                 (change)="updateAttendance(element)"
               ></mat-slide-toggle>
-              {{element.isPresent | json}}
             </td>
           </ng-container>
+         
           <tr
             mat-header-row
             *matHeaderRowDef="displayedColumns; sticky: true"
