--- a/src/app/holidays/add/add.component.html
+++ b/src/app/holidays/add/add.component.html
@@ -1,10 +1,10 @@
 <div class="flex-auto">
     <div class="flex flex-col">
-      <app-content-navbar [isBack]="true" [title]="'Add department'"></app-content-navbar>
+      <app-content-navbar [isBack]="true" [title]="'Add holiday'"></app-content-navbar>
       
   
       <!-- card design -->
-      <div class="min-h-screen  bg-gray-100 my-3" *ngIf="holidayData">
+      <div class="min-h-screen  bg-gray-100 my-3" >
         <mat-card class="p-6 bg-white px-2 mx-3 my-3">
           <div class="p-2 clear-both">
             <form [formGroup]="holiday" *ngIf="!showForm">
@@ -12,7 +12,7 @@
                 <div class="w-full">
                   <div class="grid lg:grid-cols-1 gap-4">
                     <mat-form-field class="example-full-width">
-                      <mat-label></mat-label>
+                      <mat-label>Name</mat-label>
                       <input
                         matInput
                         placeholder=""
@@ -63,6 +63,8 @@
           </div>
         </mat-card>
       </div>
+
+      
     </div>
   </div>
   
