--- a/src/app/department/add/add.component.html
+++ b/src/app/department/add/add.component.html
@@ -28,7 +28,7 @@
                       placeholder="Please enter head of the department"
                       name="departmentHead"
                       formControlName="departmentHead"
-                      (click)="setValue()"
+                      (click)="setValue('Select department head')"
                       readonly
                     />
                   </mat-form-field>
