--- a/src/app/holidays/add/add.component.html
+++ b/src/app/holidays/add/add.component.html
@@ -5,12 +5,12 @@
   
       <!-- card design -->
       <div class="min-h-screen  bg-gray-100 my-3" >
-        <mat-card class="p-6 bg-white px-2 mx-3 my-3">
+        <mat-card class="p-6 bg-white px-2 mx-3 my-3" *ngIf="holiday">
           <div class="p-2 clear-both">
             <form [formGroup]="holiday" *ngIf="!showForm">
               <div class="flex">
                 <div class="w-full">
-                  <div class="grid lg:grid-cols-1 gap-4">
+                  <div class="grid lg:grid-cols-2 gap-4">
                     <mat-form-field class="example-full-width">
                       <mat-label>Name</mat-label>
                       <input
@@ -29,22 +29,24 @@
                         formControlName="description"
                       />
                     </mat-form-field>
+                    </div>
+                  <div class="grid lg:grid-cols-2 gap-4">
                     <mat-form-field class="example-full-width">
                         <mat-label> From date</mat-label>
                         <input matInput [matDatepicker]="picker" readonly placeholder=" Please enter from date" name="fromDate"
-                          formControlName="fromDate">
+                          formControlName="fromDate"  (click)="picker.open()"> 
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
-                        <mat-error>Please provide from date </mat-error>
+                        <mat-error>Please provide Fromdate </mat-error>
                       </mat-form-field>
 
                       <mat-form-field class="example-full-width">
                         <mat-label> To date</mat-label>
                         <input matInput [matDatepicker]="picker1" readonly placeholder=" Please enter to date" name="toDate"
-                          formControlName="toDate">
+                          formControlName="toDate"  (click)="picker1.open()">
                         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                         <mat-datepicker #picker1></mat-datepicker>
-                        <mat-error>Please provide to date </mat-error>
+                        <mat-error>Please provide Todate </mat-error>
                       </mat-form-field>
                   </div>
                 </div>
@@ -54,7 +56,7 @@
                   mat-raised-button
                   color="primary"
                   [disabled]="!holiday.valid"
-                  (click)="submit()"
+                  (click)="action()"
                 >
                   Submit
                 </button>
