--- a/src/app/holidays/list/list.component.html
+++ b/src/app/holidays/list/list.component.html
@@ -1,101 +1,85 @@
 <div class="flex-auto">
-    <div class="flex flex-col">
-      <app-content-navbar [isBack]="false" [title]="'Holidays'">
-      </app-content-navbar>
-  
-      <div class="min-h-screen bg-gray-100">
-        <div class="flex justify-end m-3 items-center">
-          <div class="w-full">
-            <mat-form-field class="example-full-width w-full search-box m-0 mr-4">
-              <span matPrefix> </span>
-              <input
-                type="text"
-                matInput
-                placeholder="Search here"
-                name="search"
-                [(ngModel)]="searchText"
-                (click)="search()"
-              />
-              <button matSuffix mat-button>
-                <mat-icon (click)="search()">search</mat-icon>
-              </button>
-            </mat-form-field>
-          </div>
-          <div class="ml-7">
-            <button mat-raised-button color="primary" (click)="add()">
-              Add holiday
-            </button>
+  <div class="flex flex-col">
+    <app-content-navbar [isBack]="false" [title]="'Holidays'">
+    </app-content-navbar>
+
+    <div class=" bg-gray-100">
+      <div class="flex justify-end m-3 items-center">
+
+        <div class="ml-7">
+          <button mat-raised-button color="primary" (click)="add()">
+            Add holidays
+          </button>
+        </div>
+      </div>
+
+      <no-data-found *ngIf="!list?.length"></no-data-found>
+      <div style="margin: 15px" class="lg:flex" *ngIf="list?.length">
+        <div class="lg:w-4/6 md:w-full sm:w-full" >
+          <div class="grid lg:grid-cols-4 gap-2 m-3 md:grid-cols-2 sm:grid-cols-2 ">
+            <mat-card class="calendar-card relative hover:bg-gray-200 shadow-md cursor-pointer border hover:border" *ngFor="let holidays of list" (click)="View(holidays)">
+              <mat-card-header>
+                <div mat-card-avatar class="card-avatar"><mat-icon>calendar_month</mat-icon></div>
+                <mat-card-title>{{holidays?.name}}</mat-card-title>
+              </mat-card-header>
+              <div class="">
+                <div style="margin:48px auto; text-align:center" *ngIf="!holidays.data?.length">
+                <h3  class="font-normal"> No holidays...</h3>
+                </div>
+                <div  *ngIf="holidays.data?.length">
+                  <ul class="text-lg">
+                    <li *ngFor="let list of holidays?.data | slice :0:3">{{$any(list).onThisDay | titlecase}}</li>
+                  </ul>
+                </div>
+              </div>
+                
+              <div class="text-right">
+                <button mat-button color="primary" *ngIf="holidays?.data?.onThisDay?.length > 3" >View</button>
+              </div>
+            </mat-card>
           </div>
         </div>
-
-      <!-- <no-data-found *ngIf="!holidaysList.length"></no-data-found> -->
-
-        <div style="margin: 15px" class="holiday-container " >
-          <table
-            mat-table
-            [dataSource]="holidaysList"
-            class="mat-elevation-z8 "
-          >
-            <ng-container matColumnDef="onThisDay">
-              <th mat-header-cell  *matHeaderCellDef>Day</th>
-              <td mat-cell  *matCellDef="let element">
-                {{element.onThisDay}}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="description">
-              <th mat-header-cell  *matHeaderCellDef>Description</th>
-              <td mat-cell *matCellDef="let element">
-                {{element.description}}
-
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="fromDate">
-              <th mat-header-cell   *matHeaderCellDef>From date</th>
-              <td mat-cell *matCellDef="let element">
-                {{element.fromDate | date: "shortDate" }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="toDate">
-              <th mat-header-cell   *matHeaderCellDef>To date</th>
-              <td mat-cell *matCellDef="let element">
-                {{element.toDate | date: "shortDate" }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let element">
-                <button
-                  mat-icon-button
-                  color="primary"
-                  aria-label="Example icon button with a vertical three dot icon"
-                  (click)="$event.stopPropagation(); action(element, 'edit')"
-                >
-                  <mat-icon>edit</mat-icon>
-                </button>
-                <button
-                  mat-icon-button
-                  color="primary"
-                  aria-label="Example icon button with a home icon"
-                  (click)="$event.stopPropagation(); action(element, 'delete')"
-                >
-                  <mat-icon>delete_forever</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-            <tr
-              mat-header-row
-              *matHeaderRowDef="displayedColumns; sticky: true"
-            ></tr>
-            <tr
-              mat-row
-              *matRowDef="let row; columns: displayedColumns"
-              (click)="action(row, 'view')"
-            ></tr>
-            
-          </table>
+        <div class="lg:w-2/6 md:w-full">
+            <mat-card class="calenderView-card m-3" >
+              <mat-card-header>
+                <mat-card-title>{{selected?.name}}</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <no-data-found class="m-3" *ngIf="!selected?.data?.length"></no-data-found>
+                <div *ngIf="selected?.data?.length">
+                   <mat-card class="m-2 border box-border" *ngFor="let day of selected?.data">
+                    <div class="flex ">
+                      <div style="max-width:80%; width:80%">
+                        <div class="flex sm:flex-col sm:my-2 md:flex-row flex-wrap break-all">
+                           <span class="">From date:<span> {{day?.fromDate | date:'shortDate'}}</span></span>
+                          <span class="ml-3">To date:<span> {{day?.fromDate | date:'shortDate'}}</span></span>
+                        </div>
+                        <div class="">
+                          <span class=" text-md font-medium">{{day?.onThisDay | titlecase}}</span>
+                        </div> 
+                      </div> 
+                      <div class="max-width:20%; width:20% sm:flex">
+                        <button class="md:w-2/4 sm:w-2/4" mat-icon-button color="primary" (click)="$event.stopPropagation(); action(day, 'edit')" >
+                          <mat-icon>edit</mat-icon>
+                        </button>
+                        <button class="md:w-2/4 sm:w-2/4" mat-icon-button color="primary" (click)="$event.stopPropagation(); action(day, 'delete')">
+                          <mat-icon>delete</mat-icon>
+                        </button>
+                       
+                      </div> 
+                    </div>
+                    
+                 
+                
+                </mat-card>
+                </div>
+               
+              </mat-card-content>
+              <mat-card-actions>
+              </mat-card-actions>
+            </mat-card>
         </div>
       </div>
     </div>
   </div>
-  
-
+</div>
