--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
@@ -139,6 +139,8 @@ cursor: pointer;
 color: #3f51b5 !important;
 transition: all .3s ease-in-out;
 cursor: pointer;
-
+}
+.mat-accordion .mat-expansion-panel:last-of-type {
+  border-radius: 0px;
 }
 }
